<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <GVL Name="Torque_prediction" Id="{952ca5e8-2b56-4cc7-bc37-54b78b82d691}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	On: BOOL;
	Set: BOOL;
	Reset: BOOL;
	
	Lh_full: BOOL;
	Lh_half: BOOL;
	Equal: BOOL;
	Rh_half: BOOL;
	Rh_full: BOOL;
	
	Lh_full_request: BOOL;
	Lh_half_request: BOOL;
	Equal_request: BOOL;
	Rh_half_request: BOOL;
	Rh_full_request: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>